external-crates/move/crates/move-compiler/tests/move_check/parser/spec_parsing_old_fun_fail.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/spec_parsing_old_fun_fail.move:5:10
  │
5 │     spec fun with_aborts_if {
  │          ^^^
  │          │
  │          Unexpected 'fun'
  │          Expected only 'spec', drop the 'fun' keyword

warning[W00001]: DEPRECATED. will be removed
  ┌─ tests/move_check/parser/spec_parsing_old_fun_fail.move:5:10
  │  
5 │       spec fun with_aborts_if {
  │ ╭──────────^
6 │ │       aborts_if x == 0;
7 │ │     }
  │ ╰─────^ Specification blocks are deprecated and are no longer used
